--- a/npr-remake/npr-styles.css
+++ b/npr-remake/npr-styles.css
@@ -92,6 +92,34 @@ img {
     color: #9a9a9a;
 }
 
+.news-submenu {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    padding: 20px;
+
+    background-color: #fFfFfF;
+    width: 175px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.news-submenu>li {
+    background-color: #f9f9f9;
+    color: #000000;
+
+
+    width: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+
+.news-hover:hover+.news-submenu {
+    display: grid;
+}
+
 .donate-link {
     color: white;
 
