--- a/npr-remake/npr-styles.css
+++ b/npr-remake/npr-styles.css
@@ -29,7 +29,7 @@ ul {
     padding-right: 330px;
 }
 
-li {
+li.top {
     font-weight: 400;
     margin-right: 30px;
     font-size: 14px;
@@ -93,7 +93,9 @@ img {
 }
 
 .news-submenu {
-    display: none;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 5px;
     position: absolute;
     z-index: 1;
     padding: 20px;
@@ -108,7 +110,8 @@ img {
     color: #000000;
 
 
-    width: 30px;
+    height: 40px;
+    width: 62.5px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 5px;
