--- a/npr-remake/npr-styles.css
+++ b/npr-remake/npr-styles.css
@@ -92,34 +92,47 @@ img {
     color: #9a9a9a;
 }
 
-.news-submenu {
-    display: grid;
+.submenu {
+    display: none;
     grid-template-columns: 50% 50%;
     grid-gap: 5px;
     position: absolute;
     z-index: 1;
     padding: 20px;
+    width: 200px;
 
     background-color: #fFfFfF;
-    width: 175px;
+
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-.news-submenu>li {
+
+
+.submenu>li {
     background-color: #f9f9f9;
     color: #000000;
 
 
-    height: 40px;
-    width: 62.5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+
+
+}
+
+.submenu>li>a {
+    display: flex;
+    align-items: center;
+    min-height: 40px;
+    padding: 5px 10px;
+    background-color: #F9F9F9;
+    border-radius: 3px;
+    color: #000;
 }
 
 
-.news-hover:hover+.news-submenu {
+.hover:hover+.submenu {
+    display: grid;
+}
+
+.submenu:hover {
     display: grid;
 }
 
