--- a/npr-remake/npr-styles.css
+++ b/npr-remake/npr-styles.css
@@ -213,3 +213,31 @@ img {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
 }
+
+section {
+    position: fixed;
+    right: 0;
+    width: 300px;
+    z-index: 2;
+    background: #394F78;
+
+    margin-left: 18px;
+    margin-top: 15px;
+    margin-right: 15px;
+    border-radius: 5px 5px 0 0;
+}
+
+.inside-player {
+    width: 100%;
+    height: 88px;
+}
+
+.player-nav {
+    height: 50px;
+}
+
+.player-button {
+    padding: 0 33px 0 22px;
+    background-color: transparent;
+    border: none;
+}
