--- a/npr-remake/npr-styles.css
+++ b/npr-remake/npr-styles.css
@@ -191,11 +191,54 @@ img {
     padding: 4px;
 }
 
+.player-button>div::after {
+    font: var(--fa-font-solid);
+    content: "\f144";
+    font-size: 40px;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    background-size: 18px;
+    grid-column: 1 / 2;
+    align-self: center;
+    padding: 4px;
+    display: block;
+    grid-row: 1 / 3;
+
+}
+
+.stream-tag {
+    grid-column: 2 / 2;
+    grid-row: 1 / 2;
+
+    font-size: 12px;
+    font-weight: 700;
+
+    align-self: end;
+    text-align: left;
+}
+
+.stream-text {
+    grid-column: 2 / 2;
+    grid-row: 2 / 3;
+
+
+    font-size: 12px;
+
+    text-align: left;
+}
+
 .podcast-hover::before {
     font: var(--fa-font-solid);
     content: "\f025";
 
     padding: 4px;
+}
+
+.player-txt {
+    color: #fFfFfF;
+
+
 }
 
 .search-hover::before {
@@ -232,12 +275,56 @@ section {
     height: 88px;
 }
 
+.inside-button {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 50% 50%;
+    grid-column-gap: 11px;
+    grid-row-gap: 2px;
+
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
 .player-nav {
     height: 50px;
+    padding: 0 10px;
+}
+
+
+.player-nav>li>button {
+    font-size: 12px;
+    font-weight: 500;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+
+}
+
+.player-nav>li>button::before {
+    font: var(--fa-font-solid);
+    content: "\f04b";
+
+    margin-right: 4px;
+    font-size: 5px;
+}
+
+.player-nav>li:nth-child(2) {
+    margin-right: 15px;
+}
+
+.player-nav>li:first-child {
+    margin-right: 15px;
 }
 
 .player-button {
     padding: 0 33px 0 22px;
+    background-color: transparent;
+    border: none;
+}
+
+button {
+    padding: 0;
     background-color: transparent;
     border: none;
 }
